<resources>

    <string name="app_name">BarBarBer</string>
    <string name="title_cooperative_name">Koperasi Masjid \n AT- TAQWA \n Alamanda Regensi</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="dont_have_an_account">Belum Punya Akun ?</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="register">DAFTAR AKUN</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="no_phone">Nomor HP</string>
    <string name="next">LANJUT</string>
    <string name="enter_verification_code">Masukan Kode Verifikasi</string>
    <string name="dont_recieve_sms">Belum Mendapatkan SMS ?</string>
    <string name="resend">Kirim Ulang SMS</string>
    <string name="verification">VERIFIKASI</string>
    <string name="email">Email</string>
    <string name="address">Alamat</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="success_register">Selamat,  Akun anda sudah terdaftar</string>
    <string name="go_to_home">PERGI KE BERANDA</string>
    <string name="home">Beranda</string>
    <string name="transaction">Transaksi</string>
    <string name="cart">Keranjang</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profil</string>
    <string name="cooperative_name">KOPERASI MASJID AT-TAQWA</string>
    <string name="update_password">UBAH PASSWORD</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="old_password">Password Lama</string>
    <string name="hint_password">********</string>
    <string name="new_password">Password Baru</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="btn_save">SIMPAN</string>
    <string name="product_name">Nama Produk</string>
    <string name="add_to_chart">TAMBAH KE KERANJANG</string>
    <string name="search_hint">Cari ...</string>
    <string name="camera_access_required">Camera access is required to display the camera preview.</string>
    <string name="organization_logo">Organization Logo</string>
    <string name="background_mosque">Background Mosque</string>
    <string name="muslim_handshake">Muslim Handshake</string>
    <string name="register_photo">Register Photo</string>
    <string name="add">+</string>
    <string name="not_null">Tidak Boleh Kosong</string>
    <string name="wrong_password">password salah</string>
    <string name="username_not_found">Username tidak ditemukan</string>
    <string name="username_already_registered">Username Sudah terdaftar</string>
    <string name="code_send_to">Kode dikirim ke nomor</string>
    <string name="phone_code">+62</string>
    <string name="SELECTED_MENU">selected_menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_date">CHOOSE DATE</string>
    <string name="date_hint">31-12-2000</string>
    <string name="wrong_username_password">Username / Password Salah</string>
    <string name="verification_success">Verifikasi Berhasil</string>
    <string name="update_profile">Update Profile</string>

    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised
        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
        publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="network_not_connect">Periksa Jaringan anda</string>
    <string name="succes_add_to_cart">Berhasil ditambahkan ke keranjang</string>
    <string name="succes_add_to_wishlist">Berhasil menambahkan ke favorite</string>
    <string name="fail_add_to_wishlist">Gagal menambahkan ke Favorite</string>

    <string name="network_error">Please try again. Network not responding</string>
    <string name="desc">deskripsi</string>
    <string name="check_connection">Check Your Connection</string>
    <string name="user_image_filename">user_image_</string>
    <string name="password_not_equal">Password tidak sama</string>
    <string name="logout">Log Out</string>
    <string name="listcart">Daftar Belanja</string>
    <string name="total_price">Total Harga</string>
    <string name="dummy_price">Rp. 99.999</string>
    <string name="order_now">Pesan Sekarang</string>
    <string name="listtransaction">Daftar Transaksi</string>
    <string name="nomor_transaksi">Nomor Transaksi</string>
    <string name="date_order">Tanggal Order</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="status">Status</string>
    <string name="total_order">Total Order</string>
    <string name="text_help">Bantuan</string>
    <string name="text_barbershop_name">BarBarBer</string>
    <string name="text_barbershop_about">"BarBarBer adalah aplikasi untuk pencarian barbershop yang ada di daerah bekasi selain pencarian barbershop, aplikasi ini juga memberikan informasi tentang fasilitas yang ada di barbershop "</string>
    <string name="text_bantuan">Bantuan Aplikasi</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="detail_barbershop_text">Detail Barbershop</string>
    <string name="bantuan_desc">1. Klik menu yang ingin dicari \n2. Cari menu pilihan anda \n3. Cari peta yang anda tuju \n4. Simpan Favorit untuk klik Favorit anda</string>
    <string name="barbershop">Barbershop</string>

</resources>
